# animaOS

./: .gitignore  AGENTS.md  DEVELOPER.md  README.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  soul.md
apps/server/: README.md  project.json  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 04d82bffa29f_create_users_table.py  20260312_0003_create_user_keys_table.py  20260314_0002_create_tasks_table.py  20260314_0003_add_embedding_to_memory_items.py  20260314_0004_create_session_notes_table.py  20260314_0005_create_consciousness_tables.py  20260314_0006_add_agent_thread_sequence_counter.py  20260316_0001_create_agent_profile_table.py  20260319_0003_add_forgetting_tables.py  (+3 more)
apps/server/tests/: conftest.py  test_active_recall.py  test_agent_compaction.py  test_agent_consolidation.py  test_agent_episodes.py  test_agent_executor.py  test_agent_llm.py  test_agent_memory_blocks.py  test_agent_messages.py  test_agent_openai_compatible_adapter.py  test_agent_openai_compatible_client.py  test_agent_persistence.py  test_agent_reflection.py  test_agent_rules.py  test_agent_runtime.py  test_agent_service.py  test_agent_streaming.py  test_agent_system_prompt.py  test_agent_turn_coordinator.py  test_api_db.py  test_approval_reentry.py  test_auth.py  test_batch_segmenter.py  test_bm25_index.py  test_cancellation.py  test_chat.py  test_cognitive_pipeline.py  test_companion.py  test_consciousness.py  test_core_permissions.py  test_creation_agent.py  test_crypto.py  test_dashboard_api.py  test_data_crypto.py  test_delegation.py  test_dry_run.py  test_encrypted_core_regression.py  test_forgetting.py  test_health.py  test_heat_scoring.py  (+24 more)
(+466 files in other folders)
